Enhance development setup and update content: Added port configuration for local server, introduced npm scripts for build and development, cleared author meta tag, and updated video section text for improved clarity and marketing appeal.

--- a/src/collection.html
+++ b/src/collection.html
@@ -16,9 +16,9 @@
 <head>
     @@include('./_common-head.html', {
       "path": ".",
-      "title": "Mini eCommerce - Category | AppSeed",
-      "description": "Open-source mini eCommerce Template - Built from FIGMA.",
-      "keywords": "ecommerce, template, appseed",
+      "title": "Collection - Premium Fashion Store",
+      "description": "Browse our collection of fashion products for men, women, and kids.",
+      "keywords": "collection, fashion, clothing, shopping, category",
     })    
 </head>
   <body>
