--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
 <head>
     @@include('./_common-head.html', {
       "path": ".",
-      "title": "Mini eCommerce - HOMEpage | AppSeed",
-      "description": "Open-source mini eCommerce Template - Built from FIGMA.",
-      "keywords": "ecommerce, template, appseed",
+      "title": "Home - Premium Fashion Store",
+      "description": "Shop the latest fashion trends and discover quality products for men, women, and kids.",
+      "keywords": "fashion, clothing, ecommerce, shopping, style",
     })    
 </head>
   <body>
