--- a/src/product.html
+++ b/src/product.html
@@ -16,9 +16,9 @@
 <head>
     @@include('./_common-head.html', {
       "path": ".",
-      "title": "Mini eCommerce - Product Page | AppSeed",
-      "description": "Open-source mini eCommerce Template - Built from FIGMA.",
-      "keywords": "ecommerce, template, appseed",
+      "title": "Product Details - Premium Fashion Store",
+      "description": "View product details, specifications, and customer reviews.",
+      "keywords": "product, fashion, clothing, shopping, details",
     })    
 </head>
   <body>
