--- a/src/sign-in.html
+++ b/src/sign-in.html
@@ -16,9 +16,9 @@
 <head>
     @@include('./_common-head.html', {
       "path": ".",
-      "title": "Mini eCommerce - Product Page | AppSeed",
-      "description": "Open-source mini eCommerce Template - Built from FIGMA.",
-      "keywords": "ecommerce, template, appseed",
+      "title": "Sign In - Premium Fashion Store",
+      "description": "Sign in to your account to access exclusive deals and track your orders.",
+      "keywords": "login, sign in, fashion, ecommerce, account",
     })    
 </head>
   <body>
