--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -16,9 +16,9 @@
 <head>
     @@include('./_common-head.html', {
       "path": ".",
-      "title": "Mini eCommerce - Product Page | AppSeed",
-      "description": "Open-source mini eCommerce Template - Built from FIGMA.",
-      "keywords": "ecommerce, template, appseed",
+      "title": "Sign Up - Premium Fashion Store",
+      "description": "Create your account to start shopping and enjoy exclusive member benefits.",
+      "keywords": "register, sign up, fashion, ecommerce, account",
     })    
 </head>
   <body>
