Update branding and content across multiple files: Changed title and footer references from "Fashion Template by AppSeed" to "Premium Fashion Store" in HTML files, updated CSS variables for improved color consistency, and removed outdated copyright notices.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="assets/img/apple-icon.png"
     />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
-    <title>Fashion Template by AppSeed</title>
+    <title>Premium Fashion Store</title>
 
     <!-- Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -100,8 +100,8 @@
         <!-- Start Navbar Part -->
         <nav class="navbar navbar-expand-lg p-0">
           <div class="container-xxl">
-            <a class="navbar-brand" href="/" title="Fashion Template by AppSeed"
-              ><img src="assets/img/logo.svg" alt="Fashion Template by AppSeed"
+            <a class="navbar-brand" href="/" title="Premium Fashion Store"
+              ><img src="assets/img/logo.svg" alt="Premium Fashion Store"
             /></a>
 
             <div
@@ -114,10 +114,10 @@
                 <a
                   class="navbar-brand"
                   href="#"
-                  title="Fashion Template by AppSeed"
+                  title="Premium Fashion Store"
                   ><img
                     src="assets/img/logo.svg"
-                    alt="Fashion Template by AppSeed"
+                    alt="Premium Fashion Store"
                 /></a>
                 <button
                   type="button"
@@ -1654,12 +1654,12 @@
                   <a
                     href="#"
                     class="footer-logo"
-                    title="Fashion Template by AppSeed"
+                    title="Premium Fashion Store"
                     data-aos="zoom-in-left"
                   >
                     <img
                       src="assets/img/logo-footer.svg"
-                      alt="Fashion Template by AppSeed"
+                      alt="Premium Fashion Store"
                     />
                   </a>
                 </div>
