--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -1,15 +1,7 @@
 <!--
 =========================================================
-* Fashion Template by AppSeed - v1.0.1
+* Premium Fashion Store
 =========================================================
-
-* Product Page: https://github.com/app-generator/design-ecommerce
-* Copyright AppSeed (https://appseed.us)
-* License CCA 3.0 (preserve footer credit)
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 -->
 <!DOCTYPE html>
 <html lang="en">
