Update branding to [COMPANY NAME]: Changed all instances of "Premium Fashion Store" to "[COMPANY NAME]" in HTML files, including titles, footers, and navigation elements for consistent branding across the site.

--- a/src/collection.html
+++ b/src/collection.html
@@ -1,6 +1,6 @@
 <!--
 =========================================================
-* Premium Fashion Store
+* [COMPANY NAME]
 =========================================================
 -->
 <!DOCTYPE html>
@@ -8,7 +8,7 @@
 <head>
     @@include('./_common-head.html', {
       "path": ".",
-      "title": "Collection - Premium Fashion Store",
+      "title": "Collection - [COMPANY NAME]",
       "description": "Browse our collection of fashion products for men, women, and kids.",
       "keywords": "collection, fashion, clothing, shopping, category",
     })    
