--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!--
 =========================================================
-* Premium Fashion Store
+* [COMPANY NAME]
 =========================================================
 -->
 <!DOCTYPE html>
@@ -8,7 +8,7 @@
 <head>
     @@include('./_common-head.html', {
       "path": ".",
-      "title": "Home - Premium Fashion Store",
+      "title": "Home - [COMPANY NAME]",
       "description": "Shop the latest fashion trends and discover quality products for men, women, and kids.",
       "keywords": "fashion, clothing, ecommerce, shopping, style",
     })    
