--- a/src/product.html
+++ b/src/product.html
@@ -1,6 +1,6 @@
 <!--
 =========================================================
-* Premium Fashion Store
+* [COMPANY NAME]
 =========================================================
 -->
 <!DOCTYPE html>
@@ -8,7 +8,7 @@
 <head>
     @@include('./_common-head.html', {
       "path": ".",
-      "title": "Product Details - Premium Fashion Store",
+      "title": "Product Details - [COMPANY NAME]",
       "description": "View product details, specifications, and customer reviews.",
       "keywords": "product, fashion, clothing, shopping, details",
     })    
