--- a/src/sign-in.html
+++ b/src/sign-in.html
@@ -1,6 +1,6 @@
 <!--
 =========================================================
-* Premium Fashion Store
+* [COMPANY NAME]
 =========================================================
 -->
 <!DOCTYPE html>
@@ -8,7 +8,7 @@
 <head>
     @@include('./_common-head.html', {
       "path": ".",
-      "title": "Sign In - Premium Fashion Store",
+      "title": "Sign In - [COMPANY NAME]",
       "description": "Sign in to your account to access exclusive deals and track your orders.",
       "keywords": "login, sign in, fashion, ecommerce, account",
     })    
