--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -1,6 +1,6 @@
 <!--
 =========================================================
-* Premium Fashion Store
+* [COMPANY NAME]
 =========================================================
 -->
 <!DOCTYPE html>
@@ -8,7 +8,7 @@
 <head>
     @@include('./_common-head.html', {
       "path": ".",
-      "title": "Sign Up - Premium Fashion Store",
+      "title": "Sign Up - [COMPANY NAME]",
       "description": "Create your account to start shopping and enjoy exclusive member benefits.",
       "keywords": "register, sign up, fashion, ecommerce, account",
     })    
